@@ -10,7 +10,7 @@ class Input
 {
     public:
         Input();
-        Input(std::istream *iStream);
+        Input(std::istream *iStream, size_t lineNr = 1);
         size_t get();
         size_t lineNr() const;          
         void reRead(size_t ch);
@@ -63,7 +63,7 @@ stack for tt(Input) objects. It must make sure that a default (empty)
 tt(Input) object is in a valid state and can be destroyed. It serves no
 further purpose. tt(Input) objects, however, must support the default (or
 overloaded) assignment operator.
-    itb(Input(std::istream *iStream))
+    itb(Input(std::istream *iStream, size_t lineNr = 1))
         This constructor receives a pointer to a dynamically allocated
 tt(istream) object. The tt(Input) constructor should preserve this pointer
 when the tt(Input) object is pushed on and popped off the stack. A
@@ -72,6 +72,9 @@ owner of the tt(istream) object, albeit that its destructor is em(not)
 supposed to destroy the tt(istream) object. Destruction remains the
 responsibility of the tt(ScannerBase) object, which calls the tt(Input::close)
 member (see below) when it's time to destroy (close) the stream.
+
+        The new input stream's line counter is set to tt(lineNr), by default
+1. 
     )
 
 manpagesection(8.3. REQUIRED PUBLIC MEMBER FUNCTIONS)
