@@ -18,8 +18,8 @@ void Generator::inputInterface(std::ostream &out) const
 "\n"
 "        public:\n"
 "            Input();\n"
-"            Input(std::istream *iStream);   // iStream: dynamically "
-                                                                "allocated\n"
+"                                       // iStream: dynamically allocated\n"
+"            Input(std::istream *iStream, size_t lineNr = 1);\n"
 "            size_t get();                   // the next range\n"
 "            void reRead(size_t ch);         // push back 'ch' (if < 0x100)\n"
 "                                            // push back str from idx "
